force-app/main/default/objects/TaskObject__c/TaskObject__c.object-meta.xml
<CustomObject>
    <description>This object was created for unsubscribe and other email related actions for Pankaj&apos;s task.</description>
    <label>TaskObject</label>
    <nameField>
        <label>TaskObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>