force-app/main/default/objects/TaskObject__c/fields/isSubscribed__c.field-meta.xml
<CustomField>
    <fullName>isSubscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>obvious</description>
    <label>isSubscribed</label>
    <type>Checkbox</type>
</CustomField>