force-app/main/default/objects/TaskObject__c/fields/personName__c.field-meta.xml
<CustomField>
    <fullName>personName__c</fullName>
    <description>this will hold  the person who is making changes in sub or unsub be it user account contact</description>
    <label>personName</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>