force-app/main/default/objects/TaskObject__c/fields/selection__c.field-meta.xml
<CustomField>
    <fullName>selection__c</fullName>
    <description>this will hold the selection data what has he selected</description>
    <label>selection</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>