force-app/main/default/objects/TaskObject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>personName__c</columns>
    <columns>isSubscribed__c</columns>
    <columns>selection__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>